# stocks

./: .env_sample  .gitignore  README.md  charles_schwab.py  dummy_positions.csv  portfolio.ipynb  pyproject.toml  schwab_client.py  schwab_login.py  schwab_main.py  stooq.py  yfinance_cache_gics.py
